SOURCE/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Secondary_Group__c</fullName>
        <label>Secondary Group #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Group_Name__c</fullName>
        <label>Secondary Insurance Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Phone__c</fullName>
        <label>Secondary Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Provide__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Insurance Provider</label>
        <referenceTo>Payor__c</referenceTo>
        <relationshipLabel>Leads (Secondary Insurance Provide)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Provider__c</fullName>
        <label>Secondary Insurance Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1199 Ben &amp; Pen Plan 13162</fullName>
                </value>
                <value>
                    <fullName>Aetna - FL 60054</fullName>
                </value>
                <value>
                    <fullName>AETNA -SIGNATURE ADMINISTRATORS</fullName>
                </value>
                <value>
                    <fullName>ALICARE AMALGAMATED LIFE</fullName>
                </value>
                <value>
                    <fullName>Allegiance Benefit Plan Management INC</fullName>
                </value>
                <value>
                    <fullName>Alliance Health and Life</fullName>
                </value>
                <value>
                    <fullName>Alliant Health Plans of Georgia</fullName>
                </value>
                <value>
                    <fullName>Allied Benefits Systems</fullName>
                </value>
                <value>
                    <fullName>Allied Trades Assistance Progam</fullName>
                </value>
                <value>
                    <fullName>Ambetter of Arkansas 68069</fullName>
                </value>
                <value>
                    <fullName>AMERAPLAN</fullName>
                </value>
                <value>
                    <fullName>Ameriben</fullName>
                </value>
                <value>
                    <fullName>AmeriHealth Administrator</fullName>
                </value>
                <value>
                    <fullName>AmeriHealth HMO</fullName>
                </value>
                <value>
                    <fullName>AMERIHEALTH OF NEW JERSEY</fullName>
                </value>
                <value>
                    <fullName>ANTHEM BLUE CROSS OF CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>AUTOMATED BENEFIT SOLUTIONS FOR SMART HEATH</fullName>
                </value>
                <value>
                    <fullName>AvMed</fullName>
                </value>
                <value>
                    <fullName>BCBS - AK (Premera)</fullName>
                </value>
                <value>
                    <fullName>BCBS - AL</fullName>
                </value>
                <value>
                    <fullName>BCBS - AR</fullName>
                </value>
                <value>
                    <fullName>BCBS - AZ</fullName>
                </value>
                <value>
                    <fullName>BCBS - CO</fullName>
                </value>
                <value>
                    <fullName>BCBS - CT (Anthem)</fullName>
                </value>
                <value>
                    <fullName>BCBS - DE (Highmark)</fullName>
                </value>
                <value>
                    <fullName>BCBS - Federal</fullName>
                </value>
                <value>
                    <fullName>BCBS - FL</fullName>
                </value>
                <value>
                    <fullName>BCBS - GA</fullName>
                </value>
                <value>
                    <fullName>BCBS - IA (Wellmark)</fullName>
                </value>
                <value>
                    <fullName>BCBS - ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Insurance_Type__c</fullName>
        <label>Secondary Insurance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Member_ID__c</fullName>
        <label>Secondary Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Payment_Method__c</fullName>
        <label>Secondary Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone_Number_sub__c</fullName>
        <label>Secondary Phone Number sub</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Referrent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Referent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Secondary Inbound Contact)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_SSN_sub__c</fullName>
        <label>Secondary SSN sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_State_sub__c</fullName>
        <label>Secondary State sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Submit_Claims_to__c</fullName>
        <label>Secondary Submit Claims to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1199 NATIONAL BENEFIT FUND</fullName>
                </value>
                <value>
                    <fullName>AETNA US HEALTHCARE</fullName>
                </value>
                <value>
                    <fullName>ALICARE - HWY CONSTRUCTION</fullName>
                </value>
                <value>
                    <fullName>ALICARE AMALGAMATED LIFE</fullName>
                </value>
                <value>
                    <fullName>ALICARE AMALGAMATED LIFE- ALLIED TRADES</fullName>
                </value>
                <value>
                    <fullName>ALLEGIANCE BENEFIT PLAN MANAGEMENT INC.</fullName>
                </value>
                <value>
                    <fullName>ALLIED TRADES - ALLIED AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>ALLIED TRADES ASSISTANCE PROGRAM</fullName>
                </value>
                <value>
                    <fullName>AMALGAMATED LIFE - PAALICARE</fullName>
                </value>
                <value>
                    <fullName>AMBETTER AR</fullName>
                </value>
                <value>
                    <fullName>AMBETTER OF ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>AMERICAN BEHAVIOR</fullName>
                </value>
                <value>
                    <fullName>AMERIHEALTH ADMINISTRATORS INC.</fullName>
                </value>
                <value>
                    <fullName>AMERIHEALTH -IAA</fullName>
                </value>
                <value>
                    <fullName>AMERIHEALTH NEW JERSEYDELAWARE - HMO</fullName>
                </value>
                <value>
                    <fullName>ANTHEM BLUE CROSS CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>ANTHEM FEDERAL BLUE CROSS - FED EMPLOYEE</fullName>
                </value>
                <value>
                    <fullName>ASSOCIATES FOR HEALTH CARE PPO ONLY</fullName>
                </value>
                <value>
                    <fullName>AULT CARE</fullName>
                </value>
                <value>
                    <fullName>AUTOMATED BENEFIT SERVICES</fullName>
                </value>
                <value>
                    <fullName>AVMED INC</fullName>
                </value>
                <value>
                    <fullName>BEACON HEALTH OPTIONS</fullName>
                </value>
                <value>
                    <fullName>BEACON HEALTH OPTIONS - COLORADO HEALTH NETWORKS</fullName>
                </value>
                <value>
                    <fullName>BEACON HEALTH OPTIONS - FHC AFFILIATES</fullName>
                </value>
                <value>
                    <fullName>BEACON HEALTH OPTIONS MHSA</fullName>
                </value>
                <value>
                    <fullName>BEACON HEALTH STRATEGIES</fullName>
                </value>
                <value>
                    <fullName>BEACON HEALTH STRATEGIES- -TUFTS</fullName>
                </value>
                <value>
                    <fullName>BEACON HEALTH STRATEGIES UNICARE</fullName>
                </value>
                <value>
                    <fullName>BLUE CROSS AND BLUE SHIELD OF FLORIDA</fullName>
                </value>
                <value>
                    <fullName>BLUE CROSS OF NATIONAL CAPITAL AREA - CAREFIRST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Subscriber_First_Name__c</fullName>
        <label>Secondary Subscriber First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Subscriber_Last_Name__c</fullName>
        <label>Secondary Subscriber Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_VOB_Precertification_Company__c</fullName>
        <label>Secondary VOB Precertification Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Zip_sub__c</fullName>
        <label>Secondary Zip sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondry_Referent_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondry Referent Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Secondary Inbound referral)</relationshipLabel>
        <relationshipName>Leads9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Admit_Date__c</fullName>
        <label>Target Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_DOB__c</fullName>
        <formula>Text(Client_DOB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test_DOB</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Lead_Created_on_new</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <label>Lead Created</label>
    </recordTypes>
    <validationRules>
        <fullName>Lead_Last_Name_is_Compolsory</fullName>
        <active>true</active>
        <errorConditionFormula>And(Or(Ispickval(Status,&apos;Converted&apos;),
Ispickval(Status,&apos;Referred Out&apos;)) ,ISBLANK(Client_Last_Name__c))</errorConditionFormula>
        <errorMessage>Please Fill &apos;Patient Last Name&apos; Before Refer Out/Converting the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_close_lost</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISCHANGED(Status),ISPICKVAL(Status, &apos;Closed Lost&apos;)),

ISBLANK(TEXT(Reason_Close_Lost__c )),false)</errorConditionFormula>
        <errorMessage>Fill &apos; Reason For Closed Lost&apos; before marking stage close lost</errorMessage>
    </validationRules>
</CustomObject>